--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dtcheckbox",
-  "version": "1.0.9",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,13 @@
   },
   "homepage": "https://github.com/zhengqiangzi/dataTables.checkbox#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "jquery": "^1.12.4",
     "lodash": "^4.17.4"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
