--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dtcheckbox",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel DataTables.checkbox.origin.js -o DataTables.checkbox.js"
   },
   "repository": {
     "type": "git",
